sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: not found: value getNombreValeur
  var ecart = getNombreValeur()
              ^