sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var ecart = getNombreValeur()
  do {
    
    var aMixe = false
    
    if (ecart > 1) {
      
      ecart = ecart / 1.3
      
    }
    
    var i = 0
    
    while (i+ecart < getNombreValeurs) {
      
      if (!plusPetit(i+ecart,i)) {echange(i,i+ecart)}
      i = i + 1
      
    }
    
  } while (ecart>1 || aMixe)
}